--- a/Spy See/Spy See/Base.lproj/LaunchScreen.storyboard
+++ b/Spy See/Spy See/Base.lproj/LaunchScreen.storyboard
@@ -18,17 +18,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spy" translatesAutoresizingMaskIntoConstraints="NO" id="nn6-DE-dGg">
-                                <rect key="frame" x="96.666666666666686" y="299" width="200" height="200"/>
+                                <rect key="frame" x="96.666666666666686" y="238.66666666666663" width="200" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="BJ5-0k-yTB"/>
                                     <constraint firstAttribute="width" constant="200" id="T3a-98-9oj"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spot  The  Spy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ujz-2I-Off">
+                                <rect key="frame" x="75.666666666666686" y="488.66666666666674" width="242" height="62"/>
+                                <fontDescription key="fontDescription" name="AvenirNextCondensed-BoldItalic" family="Avenir Next Condensed" pointSize="45"/>
+                                <color key="textColor" name="B2"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="B4"/>
                         <constraints>
-                            <constraint firstItem="nn6-DE-dGg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="240" id="UR9-4K-HOR"/>
+                            <constraint firstItem="ujz-2I-Off" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Txn-02-Cav"/>
+                            <constraint firstItem="nn6-DE-dGg" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-100" id="UR9-4K-HOR"/>
+                            <constraint firstItem="ujz-2I-Off" firstAttribute="top" secondItem="nn6-DE-dGg" secondAttribute="bottom" constant="50" id="Z4Y-jj-8ef"/>
                             <constraint firstItem="nn6-DE-dGg" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="z57-JU-c4C"/>
                         </constraints>
                     </view>
@@ -40,6 +48,9 @@
     </scenes>
     <resources>
         <image name="spy" width="341.33334350585938" height="341.33334350585938"/>
+        <namedColor name="B2">
+            <color red="0.22400000691413879" green="0.24300000071525574" blue="0.27500000596046448" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="B4">
             <color red="0.93300002813339233" green="0.93300002813339233" blue="0.93300002813339233" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
